objects/copado__Test__c.object
<CustomObject>
    <description>Copado Object to spin a test scenario</description>
    <fields>
        <fullName>copado__AcceptanceCriteria__c</fullName>
        <defaultValue>&quot;{}&quot;</defaultValue>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>copado__Application__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Category__c</fullName>
        <description>Deprecated</description>
        <label>Category - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Configuration__c</fullName>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__ExtensionConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The displayed values are based on the active Extension Configuration records available in your org.</inlineHelpText>
        <label>Tool Configuration</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <errorMessage>Make sure the selected Extension Configuration is valid and active.</errorMessage>
            <filterItems>
                <field>copado__ExtensionConfiguration__c.copado__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>ChildTests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__HasExtraConfiguration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internally used to dynamically display the Test Definition tab, visible only if there are one or more UISection__mdt related records.</description>
        <label>Has Extra Configuration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Integration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>Tool - Deprecated</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>copado__ExtensionConfiguration__c.copado__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
        <relationshipLabel>Tests - Deprecated</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__LatestJobExecution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Latest_Result_Status__c</fullName>
        <formula>IF(
  ISPICKVAL(copado__LatestJobExecution__r.copado__Status__c, &apos;Successful&apos;), &apos;Success&apos;, 
  IF(
    ISPICKVAL(copado__LatestJobExecution__r.copado__Status__c, &apos;Error&apos;), &apos;Failed&apos;, 
    IF(
      ISBLANK(copado__LatestJobExecution__c), &apos;Not Started&apos;, TEXT(copado__LatestJobExecution__r.copado__Status__c)
    )
  )
)</formula>
        <label>Latest Result Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Id__c</fullName>
        <label>Parent Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent__c</fullName>
        <formula>IF( NOT( ISBLANK( copado__Parent_Id__c ) ) , HYPERLINK(&quot;/&quot;+copado__Parent_Id__c, copado__Parent_Id__c, &quot;_self&quot;) , &quot;&quot;)</formula>
        <label>Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__ReadyToRun__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>By checking this field, you are indicating that the test is ready to be executed and the &apos;Run&apos; button will display.</inlineHelpText>
        <label>Ready to Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Reference__c</fullName>
        <displayFormat>TE-{0000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready for Test</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Test_Tool__c</fullName>
        <formula>TEXT(copado__ExtensionConfiguration__r.copado__ExtensionTool__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Tool__c</fullName>
        <label>Tool - Deprecated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <formula>copado__ExtensionConfiguration__r.copado__TestType__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Tests</relationshipLabel>
        <relationshipName>Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>copado__Reference__c</columns>
        <columns>NAME</columns>
        <columns>copado__Category__c</columns>
        <columns>copado__Tool__c</columns>
        <columns>copado__User_Story__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__PreventUpdatingToolConfiguration</fullName>
        <active>true</active>
        <description>This rule prevents users from modifying the Tool Configuration after the test is created.</description>
        <errorConditionFormula>AND( NOT( ISNEW() ) ,
 ISCHANGED( copado__ExtensionConfiguration__c ) )</errorConditionFormula>
        <errorMessage>This Tool Configuration cannot be modified. Please create a new Test and select the Tool Configuration needed.</errorMessage>
    </validationRules>
</CustomObject>